# otus15

./: .travis.yml  CMakeLists.txt  diagram.py  file.txt  kkmeans_ex.cpp  readme.md  sample.txt
